# nyx

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
.forgejo/workflows/: zig.yml
.github/workflows/: zig.yml
_examples/: arithmetic.nyx  echo_server.nyx  ffi.nyx  ffi_variadic.nyx  macro.nyx  write_to_file.nyx
_examples/net/: connect.nyx  echo_server.nyx
_examples/raylib/: basic_window.nyx  delta_time.nyx  main.nyx
_examples/socket/: connect.nyx  echo_server.nyx
docs/: assembly-syntax.md  c-api.md  examples.md  ffi.md  instructions.md  memory.md  overview.md  preprocessor.md  registers.md  standard-library.md  syscalls.md
examples/: bitwise.nyx  hello.nyx
examples/raylib/: Makefile  main.c
include/: nyx.h
lib/: nyx.h
src/: Span.zig  StringInterner.zig  c_api.zig  immediate.rs  instruction.rs  main.rs  main.zig  span.rs  tests.zig  utils.zig
src/compiler/: Bytecode.zig  Compiler.zig  bytecode.rs  mod.rs  opcode.rs  opcode.zig  tests.rs
src/lexer/: Lexer.zig  Token.zig  mod.rs  tests.rs  tests.zig  token.rs
src/parser/: Parser.zig  ast.rs  ast.zig  immediate.rs  immediate.zig  instruction.rs  mod.rs  tests.rs  tests.zig
src/preprocessor/: Preprocessor.zig  defaults.zig  mod.rs  tests.rs  utils.rs
src/vm/: ExternalLoader.zig  Flags.zig  Machine.zig  Memory.zig  Vm.zig  flags.rs  macros.rs  memory.rs  mod.rs  register.rs  register.zig  stack.rs  syscall.rs  syscall.zig  tests.rs
src/vm/memory/: Block.zig  Bus.zig  Mmu.zig
std/: net.nyx  print.nyx  socket.nyx  stdlib.nyx  string.nyx
