[package]
name = "nyx"
description = "A compiler and virtual machine for the Nyx programming language"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
clap = { version = "4.5.40", features = ["derive"] }
camino = "1.1.10"
