[package]
name = "nyx"
description = "A compiler and virtual machine for the Nyx programming language"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2"
lazy_static = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
camino = "1.1.10"
libc = "0.2.174"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
